Fix image overflow issue on mobile in sprucehealth.com/providers
Reviewers: samuel, kunaljham

Reviewed By: samuel, kunaljham

Subscribers: janky

Differential Revision: https://phabricator.carefront.net/D174

--- a/resources/static/css-sass/_providers.scss
+++ b/resources/static/css-sass/_providers.scss
@@ -99,3 +99,23 @@
 		}
 	}
 }
+
+.devices {
+	text-align: center;
+}
+.devices img {
+	width: 979px;
+	height: 371px;
+}
+@media screen and (max-width: $tablet-max-width) {
+	.devices img {
+		width: 489px;
+		height: 185px;
+	}
+}
+@media screen and (max-width: $phone-max-width)  {
+	.devices img {
+		width: 244px;
+		height: 92px;
+	}
+}
